--- a/project.config.json
+++ b/project.config.json
@@ -10,7 +10,7 @@
 	"compileType": "miniprogram",
 	"libVersion": "1.9.94",
 	"appid": "wx1e177cf6e750ec89",
-	"projectname": "TheFirst",
+	"projectname": "LittleBrothers",
 	"isGameTourist": false,
 	"condition": {
 		"search": {
