--- a/app.json
+++ b/app.json
@@ -5,7 +5,8 @@
     "pages/posts/post-detail/post-detail",
     "pages/movies/movies",
     "pages/movies/more-movie/more-movie",
-    "pages/movies/movie-detail/movie-detail"
+    "pages/movies/movie-detail/movie-detail",
+    "pages/practice/practice"
   ],
   "window": {
     "backgroundTextStyle": "light",
@@ -25,6 +26,12 @@
         "text": "电影",
         "iconPath": "resources/imgs/ic_unmovies.png",
         "selectedIconPath": "resources/imgs/ic_movies.png"
+      },
+      {
+        "pagePath": "pages/practice/practice",
+        "text": "练习",
+        "iconPath": "resources/imgs/ic_unpractice.png",
+        "selectedIconPath": "resources/imgs/ic_practice.png"
       }
     ],
     "backgroundColor": "#fff",
