--- a/app.json
+++ b/app.json
@@ -27,6 +27,12 @@
         "text": "电影",
         "iconPath": "resources/imgs/ic_unmovies.png",
         "selectedIconPath": "resources/imgs/ic_movies.png"
+      },
+      {
+        "pagePath": "pages/practice/practice",
+        "text": "练习",
+        "iconPath": "resources/imgs/ic_unpractice.png",
+        "selectedIconPath": "resources/imgs/ic_practice.png"
       }
     ],
     "backgroundColor": "#fff",
